--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,11 @@
         border:none;
         color:var(--mount-meadow);
     }
+
+    .nav-item {
+        padding : 0.6rem 0;
+    }    
+
     .navbar-nav{   
         margin:0.2rem 0 0.6rem 0;
     }
@@ -135,7 +140,7 @@
         color:var(--mount-meadow)!important;
     }
     .navbar-collapse{
-        display:none;
+        display: none;
     }
     .hero-div {
         flex:1;
@@ -687,8 +692,8 @@
     }    
         /* navbar change*/
         .cng-navbar{
-            -webkit-box-shadow:0 2px 5px 0 rgba(207,205,207,0.3);
-            -moz-box-shadow:0 2px 5px 0 rgba(207,205,207,0.3);
+           /* -webkit-box-shadow:0 2px 5px 0 rgba(207,205,207,0.3);
+            -moz-box-shadow:0 2px 5px 0 rgba(207,205,207,0.3);*/
             box-shadow: 0 2px 5px 0 rgba(207,205,207,0.3);
             margin-top:0;
             background: #fff;
